[package]
name = "papyrus"
version = "0.1.0"
authors = ["Peter Coleman <peter.coleman143@gmail.com>"]

[dependencies]
csv = "1"
unicode-normalization = "0.1.7"
caseless = "0.2.1"
iron = "0.6.0"
router = "0.6.0"
url = "1.7.2"
persistent = "0.4.0"
lazy_static = "1.2.0"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0"
dotenv = "0.13.0"